fix uses case in python github workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       #       check-out repo and set-up python
       #----------------------------------------------
       - name: Get Python
-      - uses: actions/setup-python@v2
+        uses: actions/setup-python@v2
 
       #----------------------------------------------
       #  -----  install & configure poetry  -----
