Add pytest debug settings and define debug launch.json file, update README

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,12 @@
     "python.showStartPage": false,
     "python.terminal.activateEnvironment": false,
     "autoDocstring.docstringFormat": "sphinx",
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.pytestEnabled": true,
     // Markdown
     "[markdown]": {
         "editor.tabSize": 2,
