--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,9 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [main]
+    paths: # trigger only when modification of
+      - "**.py" # source and test files
+      - "./pyproject.toml"
   pull_request:
     branches: [main]
 
@@ -90,4 +93,4 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml
-          # generated using --cov-report=xml in Test with pytest
+          # generated using --cov-report=xml in "Test with pytest"
