--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,12 +66,12 @@
     },
     "python.languageServer": "Pylance",
     "python.condaPath": "~/opt/anaconda3/bin/anaconda",
-    "python.defaultInterpreterPath": "${workspaceFolder}/.venv",
-    "python.pythonPath": "${workspaceFolder}/.venv/bin/python",
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
     "python.formatting.provider": "black",
     "python.linting.enabled": true,
     "python.linting.lintOnSave": true,
     "python.terminal.activateEnvironment": false,
+    // Use "sphinx.ext.napoleon" extension in conf.py
     "autoDocstring.docstringFormat": "google",
     "pythonIndent.trimLinesWithOnlyWhitespace": true,
     // Markdown
