Update black configuration

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,7 @@ repos:
     rev: 5.5.4
     hooks:
       - id: isort
-        args: ["--profile", "black"]
+        # args: ["--profile", "black"] set up in pyproject.toml
   - repo: https://github.com/asottile/blacken-docs
     rev: v1.8.0
     hooks:
