--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ numpy = "^1.20.2"
 scipy = "^1.6.2"
 matplotlib = "^3.4.1"
 
+# A list of all of the optional dependencies, some of which are included in the
+# below `extras`. They can be opted into by apps.
 # poetry add name --optional
 
 # Jupyter notebooks
@@ -50,18 +52,6 @@ sphinxcontrib-bibtex = { version = "^2.3.0", optional = true }
 # Checks syntax of reStructuredText and code blocks nested within it https://github.com/myint/rstcheck
 rstcheck = { version = "^3.3.1", optional = true }
 
-[tool.poetry.dev-dependencies]
-# poetry add name --dev
-pytest = "^6.2.3"      # used to run the test suite of the package
-pytest-cov = "^2.11.1" # used to generate coverage report to be uploaded on Codecov for example, see --cov and cov-report in tool.pytest.ini_options
-
-black = "^21.5b2" # Python "uncompromising" code formatter https://github.com/psf/black
-isort = "^5.9.3"
-
-pre-commit = "^2.15.0"
-
-# A list of all of the optional dependencies, some of which are included in the
-# below `extras`. They can be opted into by apps.
 [tool.poetry.extras]
 # poetry install -E notebook -E docs
 notebook = [
@@ -74,6 +64,21 @@ notebook = [
 # https://www.sphinx-doc.org/en/master/index.html
 docs = ["Sphinx", "sphinx-autobuild", "sphinxcontrib-bibtex", "rstcheck"]
 
+# Development dependencies
+# poetry install installs project in editable mode + dev-dependencies
+# poetry install --no-dev
+[tool.poetry.dev-dependencies]
+# poetry add name --dev
+pytest = "^6.2.3"      # used to run the test suite of the package
+pytest-cov = "^2.11.1" # used to generate coverage report to be uploaded on Codecov for example, see --cov and cov-report in tool.pytest.ini_options
+
+# Python "uncompromising" code formatter https://github.com/psf/black
+black = { extras = ["jupyter"], version = "^21.9b0" }
+isort = "^5.9.3"
+
+pre-commit = "^2.15.0"
+toml = "^0.10.2"
+
 [build-system]
 # poetry build
 requires = ["poetry-core>=1.0.0"]
@@ -85,7 +90,13 @@ minversion = "6.0"
 addopts = "-ra -q -vv --cov=packagename --cov-report=xml"
 testpaths = ["tests"]
 
-[tool.pyright]
-include = ["src"]
-exclude = ["**/__pycache__"]
-venv = "./.venv"
+# For other tools to be black compliant
+# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
+[tool.isort]
+profile = "black"
+
+[tool.pylint.messages_control]
+disable = "C0330, C0326"
+
+[tool.pylint.format]
+max-line-length = "88"
