zsh: debug tests, comment "console" in launch.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
                 "debug-test"
             ],
             "program": "${file}",
-            "console": "integratedTerminal", // problem with zsh https://github.com/microsoft/vscode-python/issues/10398#issuecomment-597454312
+            // "console": "integratedTerminal", // problem with zsh https://github.com/microsoft/vscode-python/issues/10398#issuecomment-597454312
             "justMyCode": true,
             "env": {
                 // when using pytest-cov need to deactivate the coverage
