--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,3 +31,8 @@ repos:
     hooks:
       - id: blacken-docs
         additional_dependencies: [black==20.8b1]
+  - repo: https://github.com/myint/rstcheck
+    rev: "" # Use the sha / tag you want to point at
+    hooks:
+      - id: rstcheck
+        args: ["--ignore-directives", "autofunction,automodule,bibliography"]
