--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,6 @@ sphinx-autobuild = { version = "^2021.3.14", optional = true }
 # https://github.com/mcmtroffaes/sphinxcontrib-bibtex
 sphinxcontrib-bibtex = { version = "^2.3.0", optional = true }
 # Checks syntax of reStructuredText and code blocks nested within it https://github.com/myint/rstcheck
-rstcheck = { version = "^3.3.1", optional = true }
 
 [tool.poetry.extras]
 # poetry install -E notebook -E docs
@@ -84,6 +83,7 @@ pre-commit = "^2.15.0"
 black = { extras = ["jupyter"], version = "^21.9b0" }
 isort = "^5.9.3"
 pydocstyle = "^6.1.1"
+rstcheck = "^3.3.1"
 
 [build-system]
 # poetry build
