--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
   # making isort compatible with black
   # see https://github.com/PyCQA/isort/issues/1518
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v4.0.1
     hooks:
       - id: check-case-conflict
       - id: check-docstring-first
@@ -17,22 +17,22 @@ repos:
         exclude: ^((.*)\.(ipynb|otherext)) # avoid reformat notebooks everytime
       - id: mixed-line-ending
       - id: trailing-whitespace
-  - repo: https://github.com/psf/black
-    rev: 20.8b1
-    hooks:
-      - id: black
   - repo: https://github.com/pycqa/isort
-    rev: 5.5.4
+    rev: 5.9.3
     hooks:
       - id: isort
         # args: ["--profile", "black"] set up in pyproject.toml
+  - repo: https://github.com/psf/black
+    rev: 21.9b0
+    hooks:
+      - id: black
   - repo: https://github.com/asottile/blacken-docs
-    rev: v1.8.0
+    rev: v1.11.0
     hooks:
       - id: blacken-docs
         additional_dependencies: [black==20.8b1]
   - repo: https://github.com/myint/rstcheck
-    rev: "" # Use the sha / tag you want to point at
+    rev: 3f92957478422df87bd730abde66f089cc1ee19b
     hooks:
       - id: rstcheck
         args: ["--ignore-directives", "autofunction,automodule,bibliography"]
