--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,19 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [main]
-    paths: # trigger only when modification of
-      - "**.py" # source and test files
-      - "./pyproject.toml"
+    branches:
+      - main
+    paths:
+      - "src/**"
+      - "docs/**"
+      - "pyproject.toml"
+      - "poetry.lock"
+      - "poetry.toml"
+      - "!**.md"
+      - "!.github/workflows/ci.yml"
   pull_request:
-    branches: [main]
+    paths-ignore:
+      - "**.md"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -22,27 +29,23 @@ jobs:
   # This workflow contains a single job called "test"
   test:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: ["ubuntu-latest", "macos-latest"]
+        python-version: ["3.8", "3.9"]
+    runs-on: ${{ matrix.os }}
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      #----------------------------------------------
-      #       Check-out repository project
-      #----------------------------------------------
       # https://github.com/actions/checkout
-      - name: Checkout repository project
+      - name: Checkout project repository
         uses: actions/checkout@v2
 
-      #----------------------------------------------
-      #       Set-up python
-      #----------------------------------------------
       # https://github.com/actions/setup-python
-      - name: Get Python
+      - name: Install Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
 
-      #----------------------------------------------
-      #  -----  install & configure poetry  -----
-      #----------------------------------------------
       # https://github.com/snok/install-poetry
       - name: Install Poetry
         uses: snok/install-poetry@v1
@@ -50,9 +53,7 @@ jobs:
         # with:
         #   virtualenvs-create: true
         #   virtualenvs-in-project: true
-      #----------------------------------------------
-      #       load cached venv if cache exists
-      #----------------------------------------------
+
       - name: Load cached venv
         id: cached-poetry-dependencies
         uses: actions/cache@v2
@@ -60,35 +61,20 @@ jobs:
           path: .venv
           key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
 
-      #----------------------------------------------
-      # install dependencies if cache does not exist
-      #----------------------------------------------
       - name: Install main (non-optional) and dev dependencies
         # see [tool.poetry.dependencies] and [tool.poetry.dev-dependencies]
         # in pyproject.toml
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-root
 
-      #----------------------------------------------
-      # install your root project, if required
-      #----------------------------------------------
       - name: Install package
         run: poetry install
 
-      #----------------------------------------------
-      #    run test suite and output coverage file
-      #----------------------------------------------
-      - name: Test with pytest
+      - name: Test with pytest and create coverage report
         # Configuration of pytest [tool.pytest.ini_options] in pyproject.toml
         # https://docs.pytest.org/en/latest/reference/customize.html#pyproject-toml
-        # In the template repository options passed are
-        # -ra -q -vv --cov=packagename --cov-report=xml
-        run: poetry run pytest
+        run: poetry run pytest --cov-report=xml
 
-      #----------------------------------------------
-      #             upload coverage stats
-      # (requires CODECOV_TOKEN in repository secrets)
-      #----------------------------------------------
       - name: Upload coverage to Codecov
         # https://docs.codecov.com/docs
         # https://github.com/codecov/codecov-action
@@ -96,4 +82,4 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml
-          # generated using --cov-report=xml in "Test with pytest"
+          # generated using --cov-report=xml above
