--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,15 @@ license = "MIT"
 authors = ["Guillaume Gautier <guillaume.gga@gmail.com>"]
 maintainers = ["Guillaume Gautier <guillaume.gga@gmail.com>"]
 readme = "README.md" # path to README file (.md or .rst)
-homepage = "https://github.com/guilgautier/packagename" # url
-repository = "https://github.com/guilgautier/packagename" # url
-documentation = "https://github.com/guilgautier/packagename" # url
-keywords = [] # ["optimization", "gradrient descent"] at most 5 keywords
+homepage = "https://github.com/guilgautier/template-python-project" # url
+repository = "https://github.com/guilgautier/template-python-project" # url
+documentation = "https://guilgautier.github.io/template-python-project" # url
+keywords = [
+    "python",
+    "packaging",
+    "python-package",
+    "template",
+] # ["optimization", "gradrient descent"] at most 5 keywords
 classifiers = [
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
@@ -24,7 +29,7 @@ packages = []
 
 # https://python-poetry.org/docs/pyproject/#include-and-exclude
 include = []
-exclude = []
+exclude = [] # ["src/data/**/*"]
 
 [tool.poetry.dependencies] # https://python-poetry.org/docs/cli/#add
 # These packages are mandatory and form the core of this package’s distribution.
@@ -45,11 +50,9 @@ matplotlib = "^3.4.1"
 jupyter = { version = "^1.0.0", optional = true }
 
 # Documentation
+# configuration in docs/conf.py
 Sphinx = { version = "^4.0.3", optional = true }
 # Sphinx extensions https://www.sphinx-doc.org/en/master/usage/extensions/index.html
-# Live reload of the .rst documentation files https://github.com/executablebooks/sphinx-autobuild
-# sphinx-autobuild docs docs/_build/html
-sphinx-autobuild = { version = "^2021.3.14", optional = true }
 # Manage bibliography .bib files
 # https://github.com/mcmtroffaes/sphinxcontrib-bibtex
 sphinxcontrib-bibtex = { version = "^2.3.0", optional = true }
@@ -64,19 +67,20 @@ notebook = ["jupyter"]
 
 # Documentation is generated with Sphinx
 # https://www.sphinx-doc.org/en/master/index.html
-# - locally poetry run sphinx-autobuild docs docs/_build/html
-docs = ["Sphinx", "sphinx-autobuild", "sphinxcontrib-bibtex", "rstcheck"]
-# - Read The Docs, see .readthedocs.yaml
-# https://template-python-project.readthedocs.io/en/latest/
-rtd = ["Sphinx", "sphinxcontrib-bibtex"]
+# - locally with poetry run sphinx-build -b docs docs/_build/html
+# - online either with
+#     - ReadTheDocs see .readthedocs.yaml file
+#     - GitHub pages see .github/workflows/docs.yml
+docs = ["Sphinx", "sphinxcontrib-bibtex", "rstcheck"]
 
 # Development dependencies
 # poetry install installs project in editable mode + dev-dependencies
 # poetry install --no-dev
 [tool.poetry.dev-dependencies]
 # poetry add package-name --dev
-pytest = "^6.2.3"      # used to run the test suite of the package
-pytest-cov = "^2.11.1" # used to generate coverage report to be uploaded on Codecov for example, see --cov and --cov-report in tool.pytest.ini_options
+# see [tool.pytest.ini_options]
+pytest = "^6.2.3"      # run the test suite
+pytest-cov = "^2.11.1" # generate coverage report see --cov --cov-report flags
 
 # https://pre-commit.com/
 pre-commit = "^2.15.0"
@@ -85,6 +89,7 @@ black = { extras = ["jupyter"], version = "^21.9b0" }
 isort = "^5.9.3"
 pydocstyle = "^6.1.1"
 rstcheck = "^3.3.1"
+pylint = "^2.11.1"
 
 [build-system]
 # poetry build
@@ -94,7 +99,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.pytest.ini_options]
 # poetry run pytest
 minversion = "6.0"
-addopts = "-ra -q -vv --cov=packagename --cov-report=xml"
+addopts = "-ra -q -vv --cov=packagename --cov-report=term-missing --cov-report=xml"
 testpaths = ["tests"]
 
 # For other tools to be black compliant
