--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,16 +23,33 @@ repos:
       - id: isort
         # args: ["--profile", "black"] set up in pyproject.toml
   - repo: https://github.com/psf/black
-    rev: 21.9b0
+    rev: 21.11b1
     hooks:
       - id: black
   - repo: https://github.com/asottile/blacken-docs
-    rev: v1.11.0
+    rev: v1.12.0
     hooks:
       - id: blacken-docs
-        additional_dependencies: [black==20.8b1]
+        additional_dependencies: [black==21.11b1]
   - repo: https://github.com/myint/rstcheck
     rev: 3f92957478422df87bd730abde66f089cc1ee19b
     hooks:
       - id: rstcheck
-        args: ["--ignore-directives", "autofunction,automodule,bibliography"]
+        args: [
+            # "--report",
+            # "info",
+            "--ignore-directives",
+            "autofunction,automodule,bibliography,math,numfig,plot,testcode,testoutput",
+            "--ignore-roles",
+            "eq,cite",
+          ]
+  # notebooks
+  - repo: https://github.com/nbQA-dev/nbQA
+    rev: 1.2.2
+    hooks:
+      - id: nbqa-black
+      - id: nbqa-isort
+  - repo: https://github.com/kynan/nbstripout
+    rev: 0.5.0
+    hooks:
+      - id: nbstripout
