--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ keywords = [
 classifiers = [
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Topic :: Software Development :: Libraries :: Python Modules",
@@ -33,15 +34,17 @@ exclude = [] # ["src/data/**/*"]
 
 [tool.poetry.dependencies] # https://python-poetry.org/docs/cli/#add
 # These packages are mandatory and form the core of this package’s distribution.
-python = ">=3.8,<3.10" # <3.10 required by scipy
+python = ">=3.7.1,<3.10" # >=3.7.1 required by pandas, <3.10 required by scipy
 
 # Install latest version of dependency package-name using
 # poetry add package-name
 # specific the version
-numpy = "^1.20.2"
-scipy = "^1.6.2"
-matplotlib = "^3.4.1"
+numpy = "^1.21.4"
+scipy = "^1.7.3"
+matplotlib = "^3.5.0"
 pandas = "^1.3.4"
+
+pickle5 = { version = ">0.0", python = ">=3.5,<3.8" }
 
 # A list of all of the optional dependencies, some of which are included in the
 # below `extras`. They can be opted into by apps.
