deps: add optional restructured-text language server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,7 +84,9 @@
         "editor.quickSuggestions": true,
     },
     // RestructuredText
-    "restructuredtext.confPath": "${workspaceFolder}/docs",
+    "esbonio.server.enabled": true,
+    "esbonio.sphinx.buildDir": "${workspaceFolder}/docs/_build",
+    "esbonio.sphinx.confDir": "${workspaceFolder}/docs",
     // TOML
     "[toml]": {
         "editor.defaultFormatter": "tamasfe.even-better-toml"
@@ -98,5 +100,4 @@
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
     "python.testing.pytestEnabled": true,
-    // "restructuredtext.languageServer.disabled": true,
 }
