--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ Sphinx = { version = "^4.0.3", optional = true }
 sphinxcontrib-bibtex = { version = "^2.3.0", optional = true }
 # Checks syntax of reStructuredText and code blocks nested within it https://github.com/myint/rstcheck
 rstcheck = { version = "^3.3.1", optional = true }
+esbonio = { version = "^0.10.1", optional = true }
 
 
 [tool.poetry.extras]
@@ -76,7 +77,7 @@ notebook = ["jupyter"]
 # - online either with
 #     - ReadTheDocs see .readthedocs.yaml file
 #     - GitHub pages see .github/workflows/docs.yml
-docs = ["Sphinx", "sphinxcontrib-bibtex", "rstcheck"]
+docs = ["Sphinx", "sphinxcontrib-bibtex", "rstcheck", "esbonio"]
 
 # Development dependencies
 # poetry install installs project in editable mode + dev-dependencies
