--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,81 @@
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+# To install with pip
+# pip install .
+# pip install -e .
+# comment (above) / uncomment (below) the fields "requires" and "build-backend" below
+
+# PEP 621 Storing project metadata in pyproject.toml
+# https://peps.python.org/pep-0621/
+[project]
+name = "packagename"
+version = "0.1.0"
+description = "Python project boilerplate"
+license = { file = "LICENSE" }
+authors = [
+    { email = "guillaume.gga@gmail.com" },
+    { name = "Guillaume Gautier" },
+]
+maintainers = [
+    { name = "Guillaume Gautier", email = "guillaume.gga@gmail.com" },
+]
+readme = "README.md"
+keywords = [
+    "python",
+    "packaging",
+    "python-package",
+    "template",
+] # ["optimization", "gradrient descent"] at most 5 keywords
+classifiers = [
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Scientific/Engineering :: Mathematics",
+] # https://pypi.org/classifiers/
+
+requires-python = ">=3.7.1,<3.10" # >=3.7.1 required by pandas, <3.10 required by scipy
+
+# dependencies = ["dependency_name[extras] > 4.0.0"]
+dependencies = [
+    "numpy>=1.21.4",
+    "scipy>=1.7.3",
+    "matplotlib>=3.5.0",
+    "pandas>=1.3.4",
+    "pickle5 (>0.0) ; python_version >= '3.5' and python_version < '3.8'",
+]
+
+[project.optional-dependencies]
+# pip install ".[dev, notebook, docs]"
+# pip install "template-python-project[dev, notebook, docs]"
+dev = [
+    "pytest>=6.2.3",
+    "pytest-cov>=2.11.1",
+    "pre-commit>=2.15.0",
+    "black[jupyter]>=21.9b0",
+    "isort>=5.9.3",
+    "pydocstyle>=6.1.1",
+    "rstcheck>=3.3.1",
+    "pylint>=2.11.1",
+]
+notebook = ["jupyter>=1.0.0"]
+docs = [
+    "Sphinx>=4.0.3",
+    "sphinxcontrib-bibtex>=2.3.0",
+    "rstcheck>=3.3.1",
+    "esbonio>=0.10.1",
+]
+
+[project.urls]
+homepage = "https://github.com/guilgautier/template-python-project"      # url
+repository = "https://github.com/guilgautier/template-python-project"    # url
+documentation = "https://github.com/guilgautier/template-python-project" # url
+# changelog = "https://github.com/.../CHANGELOG.md" # url
+
+# Poetry
 [tool.poetry] # https://python-poetry.org/docs/pyproject/
 name = "packagename"
 version = "0.1.0"
@@ -64,7 +142,6 @@ sphinxcontrib-bibtex = { version = "^2.3.0", optional = true }
 rstcheck = { version = "^3.3.1", optional = true }
 esbonio = { version = "^0.10.1", optional = true }
 
-
 [tool.poetry.extras]
 # poetry install -E notebook -E docs
 
@@ -96,11 +173,6 @@ isort = "^5.9.3"
 pydocstyle = "^6.1.1"
 rstcheck = "^3.3.1"
 pylint = "^2.11.1"
-
-[build-system]
-# poetry build
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
 # poetry run pytest
