--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ build-backend = "poetry.core.masonry.api"
 # pip install .
 # pip install -e .
 # comment (above) / uncomment (below) the fields "requires" and "build-backend" below
+# requires = ["setuptools", "setuptools-scm"]
+# build-backend = "setuptools.build_meta"
 
 # PEP 621 Storing project metadata in pyproject.toml
 # https://peps.python.org/pep-0621/
