--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -39,16 +39,19 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: "3.9"
 
+      # https://github.com/snok/install-poetry
       - name: Install Poetry
         uses: snok/install-poetry@v1
-
         # with:
+        #   version: 1.2.2
         #   virtualenvs-create: true
-        #   virtualenvs-in-project: true
+        #   virtualenvs-in-project: false
+        #   virtualenvs-path: ~/my-custom-path
+        #   installer-parallel: true
 
       - name: Load cached venv
         id: cached-poetry-dependencies
@@ -57,10 +60,9 @@ jobs:
           path: .venv
           key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
 
-      - name: Install package with main (non-optional) and extra docs dependencies
-        # see [tool.poetry.dependencies] and [tool.poetry.extras]
-        # in pyproject.toml
-        run: poetry install -E docs
+      - name: Install package with main (mandatory) and docs dependencies
+        # [tool.poetry.dependencies] [tool.poetry.group.docs] in pyproject.toml
+        run: poetry install --with docs
 
       - name: Build docs with sphinx
         run: poetry run sphinx-build -b html docs docs/_build/html
